@@ -8,7 +8,7 @@ typedef struct {
 static inline void arcfourInit(arckey *, void *, unsigned short);
 static inline char *arcfourCrypt(arckey *, char *, int);
 static int send_dcc_encrypt (int, int, char *, int);
-static int get_dcc_encrypt (int, int, char *, int, int);
+static int dcc_schat_input (int, int, char *, int, int);
 static int start_dcc_crypt (int, int, unsigned long, int);
 static int end_dcc_crypt (int, unsigned long, int);
 void dcc_sdcc (char *, char *);
