@@ -1,5 +1,8 @@
 [Changes 1.2.2]
 
+* Update arcfour example module to use exported dcc_chat_socketread()
+  callback. (caf)
+
 * Export dcc_chat_socketread() and dcc_send_socketread() callbacks to modules,
   so that modules implementing new DCC types can use these. (caf)
 
